--- a/tugaske3.html
+++ b/tugaske3.html
@@ -4,6 +4,18 @@
     <title>belajar HMTL</title>
 </head>
 <body>
+    div id="header">
+            <h1> hanya melakukan tugas</h1>
+            <img src="kucing.png"/>
+        </div>
+        
+        <div> id="menu"
+            <ul>
+                <li> home </li>
+                <li> setting </li>
+                <li> ea </li>
+            </ul>
+        </div>
     <h3 id="judul"> saya sedang belajar html</h3>
     <p id="paragraf1">html adalah singkatan dari hypertxt markup language. desebut hypertext karean didalam html sebuah text biasa dapat berfungsi lain, kita dapat membuartnya menjadi link 
         yang dapat berpindah dari satu halaman ke halaman lainnya dengan hanya meng-klik tect tersebut. </p>
@@ -23,4 +35,5 @@
     <a href="#paragaf1">kembali ke paragraf pertama</a>
     
 </body>
+
 </html>
