--- a/tugaske3.html
+++ b/tugaske3.html
@@ -4,7 +4,19 @@
     <title>belajar HMTL</title>
 </head>
 <body>
-    div id="header">
+    <h1>Contoh Penggunaan Description List</h1>
+
+    <dl>
+        <dt>HTML</dt>
+        <dd>HyperText Markup Language, digunakan untuk membuat struktur halaman web.</dd>
+
+        <dt>CSS</dt>
+        <dd>Cascading Style Sheets, digunakan untuk mengatur tampilan dan layout halaman web.</dd>
+
+        <dt>JavaScript</dt>
+        <dd>Bahasa pemrograman yang digunakan untuk menambahkan interaktivitas pada halaman web.</dd>
+    </dl>
+    <div id="header">
             <h1> hanya melakukan tugas</h1>
             <img src="kucing.png"/>
         </div>
@@ -37,3 +49,4 @@
 </body>
 
 </html>
+
