penggunaan border dan juga align

--- a/tugaske3.html
+++ b/tugaske3.html
@@ -16,13 +16,13 @@
         <dt>JavaScript</dt>
         <dd>Bahasa pemrograman yang digunakan untuk menambahkan interaktivitas pada halaman web.</dd>
     </dl>
-    <div id="header">
+     <div id="header" align="center">
             <h1> hanya melakukan tugas</h1>
-            <img src="kucing.png"/>
+            <img src="kucing.png" border="3" />
         </div>
         
         <div> id="menu"
-            <ul>
+            <ul border="1">
                 <li> home </li>
                 <li> setting </li>
                 <li> ea </li>
@@ -49,4 +49,5 @@
 </body>
 
 </html>
+
 
