--- a/proyek ke 4 ubed/berita.html
+++ b/proyek ke 4 ubed/berita.html
@@ -29,10 +29,11 @@
         </main>
 
         <footer>
-            <p>Copyright By Nama: [Nama Anda] Nim: [NIM Anda]</p>
+            <p>Copyright By Nama: sayyid ahmed ubaidillah Nim: 4123051</p>
         </footer>
 
     </div>
 
 </body>
+
 </html>
