Update penambahan email

--- a/proyek ke 4 ubed/index.html
+++ b/proyek ke 4 ubed/index.html
@@ -37,7 +37,7 @@
             <div class="content-columns">
                 <div class="column">
                     <h3>Contact</h3>
-                    <p>Silakan hubungi kami melalui formulir yang tersedia atau email ke info@website.com.</p>
+                    <p>Silakan hubungi kami melalui formulir yang tersedia atau email ke sayyidahmedubaidillah@saintek.unipdu.ac.id</p>
                 </div>
                 <div class="column">
                     <h3>Status</h3>
@@ -53,4 +53,5 @@
     </div>
 
 </body>
+
 </html>
